# Schmith

./: .gitignore  README.md  XChange Knowledge Base  curl_test.sh  demo.sh  ir_requirements  issues.txt  pyproject.toml  run.sh  run_grouped_packets.sh
archive/: IR_PHASE2_TASKS.md  (+6 more)
v2/: config.yaml  pyproject.toml  validate.sh
v2/docs/: DESIGN.md  GENERATION_STABILITY.md  IMPLEMENTATION.md  PARTIAL_REGENERATION.md  TYPED_PYTHON_ARCHITECTURE_GUIDELINES.md
v2/output/GET_rest_v1.0_projects_{project_id}_timecard_entries/: TimecardEntryDataObject.cs  ir.json  schema.md
v2/output/GET_rest_v1.0_projects_{project_id}_timesheets/: TimesheetDataObject.cs  ir.json  schema.md
v2/output/GET_rest_v1.0_tax_codes/: TaxCodeDataObject.cs  ir.json  schema.md
v2/output/GET_rest_v1.1_companies_{company_id}_users/: CompanyUserDataObject.cs  ir.json  schema.md
v2/output/GET_rest_v1.1_projects/: ir.json  schema.md
v2/schmith/: cli.py  pipeline.py  pipeline_invariants.py  validation.py
v2/schmith/adapters/: base.py
v2/schmith/adapters/api/: __init__.py
v2/schmith/generation/: llm.py  prompt.py  prompts.json  type_mapping.py  type_tree.py
v2/schmith/ir/: composition.py  models.py  store.py
v2/schmith/shared/: hashing.py  provenance.py  schema_ids.py
v2/tests/: test_adapter_base.py  test_composition.py  test_endpoint_resolution.py  test_hashing.py  test_llm_provider_config.py  test_openapi_adapter.py  test_pagination.py  test_pipeline_invariants.py  test_raml_adapter.py  test_schema_ids.py  test_schema_store.py  test_type_mapping.py  test_type_tree.py  test_validation.py
(+21032 files in other folders)
